# caverneer

./: CMakeLists.txt  LICENSE  README.md
core/: CMakeLists.txt
core/include/core/: window.h
core/include/core/debug/: assert.h  terminal.h
core/include/core/graphics/: color.h  font.h  image.h  pixel.h  projection.h  rect.h  renderer.h  spritesheet.h  texture.h  texture_region.h
core/include/core/math/: matrix.h  point.h  util.h  vector.h
core/include/core/util/: error.h  filesystem.h  string_view.h  unreachable.h
core/src/: window.cpp
core/src/debug/: assert.cpp  terminal.cpp
core/src/graphics/: color.cpp  font.cpp  gl_assert.cpp  gl_assert.h  image.cpp  pixel.cpp  projection.cpp  rect.cpp  renderer.cpp  spritesheet.cpp  texture.cpp  texture_region.cpp
core/src/math/: matrix.cpp  point.cpp  util.cpp  vector.cpp
core/src/util/: error.cpp  filesystem.cpp  string_view.cpp  unreachable.cpp
game/: CMakeLists.txt
sandbox/: CMakeLists.txt
sandbox/debug/: CMakeLists.txt
sandbox/debug/assert/: CMakeLists.txt
sandbox/debug/assert/src/: main.cpp
sandbox/debug/terminal/: CMakeLists.txt
sandbox/debug/terminal/src/: main.cpp
sandbox/renderer/: CMakeLists.txt
sandbox/renderer/src/: main.cpp
sandbox/text_rendering/: CMakeLists.txt
sandbox/text_rendering/src/: main.cpp
sandbox/util/: CMakeLists.txt
sandbox/util/unreachable/: CMakeLists.txt
sandbox/util/unreachable/src/: main.cpp
sandbox/window/: CMakeLists.txt
sandbox/window/src/: main.cpp
test/: CMakeLists.txt
test/unit/: CMakeLists.txt
test/unit/core/: CMakeLists.txt
test/unit/core/src/graphics/: test_image.cpp  test_pixel.cpp  test_spritesheet.cpp  test_texture_region.cpp
test/unit/core/src/math/: test_matrix.cpp  test_max.cpp  test_min.cpp  test_point.cpp  test_vector.cpp
test/unit/core/src/util/: test_error.cpp  test_filesystem.cpp  test_string_view.cpp
